# AED-FEUP

./: .gitignore
TP1/: main.cpp
TP1/Tests/: parque.cpp  parque.h
TP10/Tests/: disjointSets.h  funWithGraphs.cpp  graph.cpp  graph.h
TP1_extra/Tests/: mail.cpp  mail.h  postOffice.cpp  postOffice.h  postman.cpp  tests.cpp
TP3/Tests/: funSearchProblem.cpp  tests.cpp
TP4/Tests/: funSortProblem.cpp  tests.cpp
TP5/Tests/: game.cpp  stackExt.h  tests.cpp
TP6/Tests/: bst.h  dictionary.cpp  dictionary.h  game.cpp  tests.cpp
TP7/Tests/: bst.h  funWithBSTs.cpp  tests.cpp
TP8/Tests/: funWithHashTables.cpp  hashTable.h  tests.cpp
TP9/Tests/: graph.cpp  graph.h  tests.cpp
Teste 1/2015/: CMakeLists.txt  Escritorio.cpp  Escritorio.h  Test.cpp
Teste 1/2016/: CMakeLists.txt  Mail.cpp  Mail.h  PostOffice.cpp  PostOffice.h  Postman.cpp  Postman.h
Teste 1/2017/: CMakeLists.txt  Car.cpp  Car.h  Garage.h
Teste 2/2013/: Test.cpp
Teste 2/2014/: Supermercado.cpp
Teste 2/2016/: AfterSalesService.cpp  CMakeLists.txt  Purchase.cpp
Teste 2/2017/: CMakeLists.txt  Doctor.cpp  Hospital.cpp
Teste 2/2018/: CMakeLists.txt  CSimpleList.h  CStack.h  Kart.cpp
Teste 3/2013/: CMakeLists.txt  Cooperativa.cpp  Cooperativa.h  Test.cpp
Teste 3/2014/: CMakeLists.txt  Clinica.cpp  Clinica.h  Test.cpp
Teste 3/2015/: CMakeLists.txt  Cinema.cpp  Cinema.h  CinemaFinder.cpp  CinemaFinder.h  Film.cpp  Film.h  FilmTime.cpp  FilmTime.h
Teste 3/2016/: Book.cpp  CMakeLists.txt  ReadingClub.cpp  ReadingClub.h  User.cpp
Teste 3/2017/: CMakeLists.txt  Expertize.cpp  FEUPConsulting.cpp  (+1 more)
(+18 files in other folders)
